# A-console-application-for-working-with-BMP-files.

./: BMP READER.cpp  BMP READER.vcxproj  BMP READER.vcxproj.filters  BMP.cpp  BMP.h  BMP_READER.cpp  CMakeLists.txt  README.md
x64/Debug/: BMP READER.exe.recipe  BMP READER.ilk  vc143.idb
x64/Debug/BMP READER.tlog/: BMP READER.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
